--- a/apps/api/src/main/resources/application.properties
+++ b/apps/api/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=5000
+# Database connection
+spring.datasource.url=${APRENGO_JDBC_URL}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
