--- a/apps/api/.gitignore
+++ b/apps/api/.gitignore
@@ -1,7 +1,19 @@
 ### Compiled class files ###
-*.class
-/target/*
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 *.jar
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
 ### Log files ###
 *.log
