--- a/apps/ems/package.json
+++ b/apps/ems/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/react-hooks": "^3.7.0",
-    "@testing-library/user-event": "^12.5.0",
+    "@testing-library/user-event": "^12.6.0",
     "jest-dom": "^4.0.0",
     "mdbreact": "^5.0.1",
     "react": "^17.0.1",
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "axios": "^0.21.0",
+    "react-router-dom": "^5.2.0",
     "react-toastify": "^6.2.0"
   }
 }
