--- a/apps/api/src/test/resources/application.properties
+++ b/apps/api/src/test/resources/application.properties
@@ -5,6 +5,9 @@ spring.h2.console.path=/test
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.driver-class-name=org.h2.Driver
 
+spring.datasource.username=sa
+spring.datasource.password=
+
 # Data Init
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.initialization-mode=always
